tests/rosetta/out/Dart/call-a-function-5.error
run error: exit status 254
../../tests/rosetta/out/Dart/call-a-function-5.dart:23:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/call-a-function-5.dart:16:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/call-a-function-5.dart:13:48: Error: A value of type 'num' can't be returned from a function with return type 'int'.
  return ((p as Map)['a'] + (b as num) as num) + (p as Map)['c'];
                                               ^
../../tests/rosetta/out/Dart/call-a-function-5.dart:24:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/call-a-function-5.dart:48:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/call-a-function-5.dart:77:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/call-a-function-5.dart:82:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/call-a-function-5.dart:86:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
